--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
-<h1>Hello {{name}}!</h1>
-<br>
-<br>
-<form action="/create-list" method="post">
-    <input type="listText" name="listText" placeholder="Create your list"/>
-    <button type="submit">Submit</button>
-</form>
-<br>
-<br>
-{{name}}'s To-Do List:
-<ol>
-    {{#listItems}}
-    <li>{{listText}}</li>
-    {{/listItems}}
-</ol>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Home</title>
+    </head>
+    <body>
+        <h1>Hello {{name}}!</h1>
+        <br>
+        <br>
+        <form action="/create-list" method="post">
+            <input type="listText" name="listText" placeholder="Create your list"/>
+            <button type="submit">Submit</button>
+        </form>
+        <br>
+        <br>
+        {{name}}'s To-Do List:
+        <ol>
+        {{#listItems}}
+            <li>{{listText}}</li>
+        {{/listItems}}
+        </ol>
+    <form action="/delete" method="post">
+        <input type="hidden" name="ID" value="{{id}}"/>
+        <button type="submit">Delete</button>
+    </form>
+    </body>
 </html>
