--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -7,6 +7,9 @@
     <body>
         <h1>Hello {{name}}!</h1>
         <br>
+        <form action="/logout" method="post" style="display: inline-block;">
+            <button type="submit">Logout</button>
+        </form>
         <br>
         <form action="/create-list" method="post">
             <input type="listText" name="listText" placeholder="Create your list"/>
@@ -20,9 +23,10 @@
             <li>{{listText}}</li>
         {{/listItems}}
         </ol>
-    <form action="/delete" method="post">
-        <input type="hidden" name="ID" value="{{id}}"/>
-        <button type="submit">Delete</button>
+        <form action="/delete" method="post">
+            <input type="hidden" name="ID" value="{{id}}"/>
+            <button type="submit">Delete</button>
     </form>
+    <a href="/edit">Edit List</a>
     </body>
 </html>
