edit not working

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -29,7 +29,7 @@
                 </form>
                 <form action="/edit-item" method="post">
                     <input type="hidden" name="ID" value="id"/>
-                    <a href="/edit">Edit List</a>
+                    <a href=“/edit-item?ID={{id}}">Edit List</a>
                 </form>
             </li>
         {{/listItems}}
