--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -26,9 +26,8 @@
                 <form action="/delete" method="post">
                     <input type="hidden" name="ID" value="{{id}}"/>
                     <button type="submit">Delete</button>
-
                 </form>
-                <a href=“/edit-item?ID={{id}}">Edit List</a>
+                <a href="/edit-item?ID={{id}}">Edit List</a>
             </li>
         {{/listItems}}
         </ol>
